@@ -133,6 +133,8 @@ New features:
 - Error message when you specify an unknown skill name in skillsAddAuto.
 - 'eq <item>' command now only matches unequipped items.
 - When an item is identified, you will see its inventory index now.
+- openkore will now return a fatal error if an !include file is missing
+  in config.txt.
 
 New commands:
 - getplayerinfo (number)
